--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8">
     <title>Fork Me! FCC: Test Suite Template</title>
     <link rel="stylesheet" href="css/style.css">
-  </head>
+</head>
 
-  <body>
+<body>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
-<div>
-  Hello World
-</div>
+    <div>
+        Hello World we are developers!
+    </div>
     <!--
 
     Hello Camper!
@@ -23,6 +24,7 @@
     - The freeCodeCamp Team
 
     -->
-    <script  src="js/index.js"></script>
-  </body>
+    <script src="js/index.js"></script>
+</body>
+
 </html>
