--- a/index.html
+++ b/index.html
@@ -10,9 +10,22 @@
 <body>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     <div>
-        Hello World we are developers!
+        <h1 id="title">Microverse Survey Form</h1>
+        <p id="description">
+            Thank you for taking the time to help us improve our skills
+        </p>
     </div>
-    <!--
+
+    <form id="survey-form">
+        <div>
+            <label id="name-label" for="name">Name</label>
+            <input type="text" name="name" id="name" placeholder="Enter your name" required="" />
+        </div>
+        <div>
+            <label id="email-label" for="email">Email</label>
+            <input type="email" name="email" id="email" placeholder="Enter your Email" required="" />
+        </div>
+        <!--
 
     Hello Camper!
 
@@ -24,7 +37,7 @@
     - The freeCodeCamp Team
 
     -->
-    <script src="js/index.js"></script>
+        <script src="js/index.js"></script>
 </body>
 
 </html>
