--- a/index.html
+++ b/index.html
@@ -25,18 +25,96 @@
             <label id="email-label" for="email">Email</label>
             <input type="email" name="email" id="email" placeholder="Enter your Email" required="" />
         </div>
-        <!--
+         
+      <div>
+        <label id="number-label" for="number"
+          >Age<span class="clue">(optional)</span></label
+        >
+        <input
+          type="number"
+          name="age"
+          id="number"
+          min="10"
+          max="99"
+          placeholder="Age"
+        />
+      </div>
+      <div>
+        <p>Which option best describes your current position?</p>
+        <select id="dropdown" name="role" required="">
+          <option disabled="" selected="" value="">
+            Select current position
+          </option>
+          <option value="job">Full Stack Devreloper</option>
+          <option value="learner">Front End Developer</option>
+          <option value="learner">Back End Developer</option>
+        </select>
+      </div>
 
-    Hello Camper!
+      <div>
+        <p>Would you recommend Microverse to a friend?</p>
+        <label>
+          <input
+            name="user-recommend"
+            value="definitely"
+            type="radio"
+            checked=""
+          />Definitely</label
+        >
+        <label>
+          <input name="user-recommend" value="maybe" type="radio" />Maybe</label
+        >
 
-    For now, the test suite only works in Chrome!
-    Please read the README below in the JS Editor before beginning.
-    Feel free to delete this message once you have read it.
-    Good luck and Happy Coding!
+        <label
+          ><input name="user-recommend" value="not-sure" type="radio" />Not
+          sure</label
+        >
+      </div>
 
-    - The freeCodeCamp Team
+      <div>
+        <p>
+          What would you like to see Microverse improved on?
+          <span>(Check all that apply)</span>
+        </p>
 
-    -->
+        <label
+          ><input
+            name="prefer"
+            value="front-end-projects"
+            type="checkbox"
+          />Front-end Projects</label
+        >
+        <label>
+          <input
+            name="prefer"
+            value="back-end-projects"
+            type="checkbox"
+          />Back-end Projects</label
+        >
+
+        <label
+          ><input
+            name="prefer"
+            value="challenges"
+            type="checkbox"
+          />Challenges</label
+        >
+      </div>
+
+      <div>
+        <p>Any comments or suggestions?</p>
+        <textarea
+          id="comments"
+          class="input-textarea"
+          name="comment"
+          placeholder="Enter your comment here..."
+        ></textarea>
+      </div>
+
+      <div>
+        <button type="submit" id="submit" class="submit-button">Submit</button>
+      </div>
+     
         <script src="js/index.js"></script>
 </body>
 
